--- a/static/css/base.css
+++ b/static/css/base.css
@@ -344,6 +344,8 @@ footer a:hover {
         margin-bottom: 10px;
         width: 100%;
         text-align: center;
+        margin-top: 5px;
+        margin-bottom: 10px;
     }
 
     #navbarNav ul.navbar-nav li.nav-item a.nav-link {
